<resources>
    <string name="app_name">DoodleCam</string>
    
    <string name="on_set_label">Set Color</string>
    <string name="start_activity">Initial Screen</string>
    <string name="start_image_capture">Take a New Picture</string>
    <string name="capture_image">Snap it!</string>
    <string name="save_image">Save Picture</string>
    <string name="recapture_image">Retake Picture</string>
    <string name="capturing_image">Taking New Picture</string>
    <string name="done">Done</string>
    <string name="ok_label">OK</string>
    <string name="action_setwidth">Set Width</string>
    <string name="action_setcolor">Set Color</string>
    <string name="title_activity_set_width_dialog">Set the Pen Width</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_set_color_dialog">Set Color</string>
    <string name="cancel_label">Cancel</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="alpha">Alpha</string>
    <string name="clear">Clear</string>
</resources>