<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.elon.cs.dotpainter.SetColorDialogActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/label_layout"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="13dp"/>

            <TextView
                android:text="@string/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="13dp"/>

            <TextView
                android:text="@string/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="13dp"/>

            <TextView
                android:text="@string/alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="13dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/redSeekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="255"/>

            <SeekBar
                android:id="@+id/greenSeekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="255"/>

            <SeekBar
                android:id="@+id/blueSeekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="255"/>

            <SeekBar
                android:id="@+id/alphaSeekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blueSeekBar"
                android:max="255"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/current_color_view"
        android:layout_height="30dp"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alpha_linear"
        android:layout_gravity="center_horizontal"
        android:text="@string/on_set_label"
        android:onClick="onSetColorClick"/>

</LinearLayout>